# VirtualLandRegistery

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/virtual_land_registry_backend/: Cargo.toml  virtual_land_registry_backend.did
src/virtual_land_registry_backend/src/: lib.rs
src/virtual_land_registry_frontend/: package.json
src/virtual_land_registry_frontend/src/: App.js  App.jsx  Auth.css  index.css
src/virtual_land_registry_frontend/src/Styles/: BuyLand.css  Dashboard.css  LegalPages.css  Login.css  RegisterLand.css  ViewLand.css
src/virtual_land_registry_frontend/src/auth/: icpAuth.js
src/virtual_land_registry_frontend/src/components/: Navbar.js
src/virtual_land_registry_frontend/src/contexts/: UserContext.js
src/virtual_land_registry_frontend/src/pages/: BuyLand.js  Dashboard.js  Home.js  Login.js  PrivacyPolicy.js  RegisterLand.js  Support.js  TermsAndConditions.js  ViewLand.js  canister_ids.json
src/virtual_land_registry_frontend/src/utilis/: ic.js
virtual_land_registry_frontend/: package-lock.json  package.json
virtual_land_registry_frontend/src/: App.js  index.css  index.js
virtual_land_registry_frontend/src/Styles/: Dashboard.css  RegisterLand.css  ViewLand.css
virtual_land_registry_frontend/src/components/: Navbar.js
virtual_land_registry_frontend/src/contexts/: UserContext.js
virtual_land_registry_frontend/src/pages/: BuyLand.js  Dashboard.js  Home.js  Login.js  RegisterLand.js  SellLand.js  Signup.js  ViewLand.js
