[package]
name = "virtual_land_registry_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # This is required to generate .wasm

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.0"
ic-cdk-timers = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
 